Lots of work to the controllers, loader, and calendar

--- a/content/articles/ssh-tunnels-with-plink-and-heidisql/content.html.twig
+++ b/content/articles/ssh-tunnels-with-plink-and-heidisql/content.html.twig
@@ -37,7 +37,7 @@
 </p>
 
 <p>
-	<img src="<?php echo$page_url; ?>insecure_mysql.png" alt="Insecure!  Boo!" />
+	<img src="{{ page_url }}/insecure_mysql.png" alt="Insecure!  Boo!" />
 </p>
 
 <p>
@@ -54,7 +54,7 @@
 </p>
 
 <p>
-	<img src="<?php echo$page_url; ?>secure_ssh_traffic.png" alt="Secure SSH Traffic.  Yay!" />
+	<img src="{{ page_url }}/secure_ssh_traffic.png" alt="Secure SSH Traffic.  Yay!" />
 </p>
 
 
