Most of the basics in place.  Working on content now

--- a/templates/errors/error.html.twig
+++ b/templates/errors/error.html.twig
@@ -1,3 +1,5 @@
+{# Does not inherit from any base template, to avoid dependencies #}
+{# and extra code (e.g. JavaScript, etc) from loading #}
 <!DOCTYPE html>
 <html lang="en">
     <head>
