--- a/templates/pages/front.html.twig
+++ b/templates/pages/front.html.twig
@@ -112,7 +112,7 @@
                 <li class='item highlight'>
                     <a href='#'>
                         <i class="icon-circle-arrow-right"></i>                                      
-                        <span class='title'>View My Resume</span>
+                        <span class='title'>View My CV</span>
                     </a>
                 </li>
 
