--- a/templates/pages/calendar.html.twig
+++ b/templates/pages/calendar.html.twig
@@ -7,6 +7,10 @@
             margin: 0 auto;
         }
 
+        .calendar h1 {
+            margin-bottom: 0.6em;
+        }
+
         .calendar_agenda {
             margin: 0;
             padding: 0;
@@ -45,6 +49,7 @@
             border-top: 1px solid #CCC; 
             padding: 5px 0;
             list-style-type: none;
+            text-align: left;
         }
 
         .calendar_agenda .cal_dateitems > li:first-child {
@@ -60,9 +65,13 @@
             width: 90px;
         }
 
+        .calendar_agenda .cal_dateitems .cal_time {
+            padding-left: 8px;
+        }
+
         .calendar_agenda .cal_dateitems .cal_title,
         .calendar_agenda .cal_dateitems .cal_loc {
-            margin: 0 0 4px 90px;
+            margin: 0 0 4px 98px;
             display: block;
         }
 
@@ -98,6 +107,11 @@
 
         /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
         @media only screen and (max-width: 767px) {
+
+            .calendar h1 {
+                font-size: 1.5em;
+            }
+
             .little-calendar-container {
                 display: block;
             }
@@ -111,6 +125,9 @@
 {% endblock %}
 {% block content %}
 <div class='calendar'>
+
+    <h1>Casey McLaughlin's Calendar</h1>
+
     <div class="big-calendar-container">
         <iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showCalendars=0&amp;showTz=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=caseyamcl%40gmail.com&amp;color=%232952A3&amp;ctz=America%2FNew_York" style=" border-width:0 " width="940" height="600" frameborder="0" scrolling="no"></iframe>
     </div>
