--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -20,6 +20,29 @@ body > .container {
 
 /* General Layout --------------------------- */
 
+body > header {
+    background-color: #333;
+    border-bottom: 1px solid #F1F1F1;
+}
+
+body > header h1 {
+    font-size: 1.5em;
+    margin: 2px;
+    color: #F5F5F5;
+}
+
+body > header h1 a {
+    color: #F5F5F5;
+}
+
+@media (max-width: 767px) {
+    body > header {
+        margin-left: -20px;
+        margin-right: -20px;
+        text-align: center;
+    }
+}
+
 .container > footer {
     text-align: center;
     margin-top: 2.5em;
