--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,14 @@
     </head>
     <body>
         
+        <header>
+            <div class='container'>
+                <div class='span12'>
+                    <h1><a href='{{ site_url }}' title='Homepage'>Casey McLaughlin</a></h1>
+                </div>
+            </div>
+        </header>
+
         <div class='container'>
 
             {% block content %}
