--- a/templates/pages/calendar.html.twig
+++ b/templates/pages/calendar.html.twig
@@ -8,7 +8,9 @@
         }
 
         .calendar h1 {
-            margin-bottom: 0.6em;
+            padding-bottom: 0.6em;
+            margin-bottom:  0.8em;
+            border-bottom: 1px solid #CCC;
         }
 
         .calendar_agenda {
@@ -126,10 +128,10 @@
 {% block content %}
 <div class='calendar'>
 
-    <h1>Casey McLaughlin's Calendar</h1>
+    <h1>Calendar</h1>
 
     <div class="big-calendar-container">
-        <iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showCalendars=0&amp;showTz=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=caseyamcl%40gmail.com&amp;color=%232952A3&amp;ctz=America%2FNew_York" style=" border-width:0 " width="940" height="600" frameborder="0" scrolling="no"></iframe>
+        <iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showCalendars=0&amp;showTz=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=caseyamcl%40gmail.com&amp;color=%232952A3&amp;ctz=America%2FNew_York" style=" border-width:0 " width="950" height="600" frameborder="0" scrolling="no"></iframe>
     </div>
 
     <div class="medium-calendar-container">
