--- a/templates/rss.xml.twig
+++ b/templates/rss.xml.twig
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<rss version="2.0">
+<rss version="2.0" xmlns:atom="http://www.w3.org/2005/Atom">
 <channel>
+    <atom:link href="{{ current_url }}" rel="self" type="application/rss+xml" />
     <title>Casey McLaughlin: {{ feedTitle }}</title>
     <description>{{ feedDesc }}</description>
     <link>{{ current_url }}</link>
-    <lastBuildDate>{{ date() | date('D, d M y H:i:s O') }}</lastBuildDate>
-    <pubDate>{{ date() | date('D, d M y H:i:s O') }}</pubDate>
+    <lastBuildDate>{{ date() | date(dateFormat) }}</lastBuildDate>
+    <pubDate>{{ date() | date(dateFormat) }}</pubDate>
     <ttl>1800</ttl>
 
     {% for item in items %}
@@ -14,7 +15,7 @@
          <description>{{ item.summary }}</description>
          <link>{{ item.url }}</link>
          <guid>{{ item.url }}</guid>
-         <pubDate>{{ item.pubDate | date('D, d M y H:i:s O') }}</pubDate>
+         <pubDate>{{ item.pubDate | date(dateFormat) }}</pubDate>
     </item>
     {% endfor %}
  
