Started working on work content with a few tweaks to other stuff

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -35,6 +35,11 @@ body > header h1 a {
     color: #F5F5F5;
 }
 
+body > header h1 a:hover {
+    text-decoration: none;
+    color: #cef;
+}
+
 @media (max-width: 767px) {
     body > header {
         margin-left: -20px;
