--- a/templates/pages/front.html.twig
+++ b/templates/pages/front.html.twig
@@ -119,6 +119,7 @@
 
     </section>                
 
+    {# NOT READY YET
     <section class='row-fluid'>
 
         <div class='span4 left'>
@@ -148,7 +149,7 @@
         </div>
 
     </section>                
-
+    #}
 
     <section class='row-fluid'>
 
