--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,14 @@
             {% endblock %}
 
             <footer>
-                <p>cc Casey McLaughlin</p>
+                <p>
+                    <a  rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.en_US" title='Creative Commons Share Alike 3.0 License'>
+                        <img src='{{ base_url }}/assets/img/cc_12x12_gray.png' alt='Creative Commons Share-Alike' />
+                    </a>
+                    <a href='{{ site_url }}' title='Home'>
+                        Casey McLaughlin
+                    </a>
+                </p>
             </footer>
         </div>
 
