Fixed asc/desc order in crawler

--- a/templates/pages/resume.html.twig
+++ b/templates/pages/resume.html.twig
@@ -185,7 +185,7 @@
 </style>
 {% endblock %}
 {% block content %}
-<div class="hresume fourteen columns offset-by-one noprintlinks">
+<div class="hresume noprintlinks">
     
     <address id='contactinfo' class="vcard">
         <h2 class="fn">{{ resume.name }}</h2>
