Style and other tweaks

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -126,6 +126,7 @@ pre > code {
 .itemlist > li {
     list-style-type: none;
     margin-left: 0;
+    margin-bottom: 0.25em;
 }
 
 .itemlist > li.highlight {
