--- a/templates/pages/work.html.twig
+++ b/templates/pages/work.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{% block pagetitle %}{{ title }}{% endblock %}
 {% block page_headers %}
     <style type='text/css'>
 
