--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Casey McLaughlin | This is my Website</title>
+        <title>Casey McLaughlin | {% block pagetitle %}Website{% endblock %}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link href="{{ base_url }}/assets/css/bootstrap.css" rel="stylesheet">
