--- a/templates/pages/calendar.html.twig
+++ b/templates/pages/calendar.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{% block pagetitle %}Calendar{% endblock %}
 {% block page_headers %}
     <style type='text/css'>
 
@@ -127,8 +128,6 @@
 {% endblock %}
 {% block content %}
 <div class='calendar'>
-
-    <h1>Calendar</h1>
 
     <div class="big-calendar-container">
         <iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showCalendars=0&amp;showTz=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=caseyamcl%40gmail.com&amp;color=%232952A3&amp;ctz=America%2FNew_York" style=" border-width:0 " width="950" height="600" frameborder="0" scrolling="no"></iframe>
