--- a/templates/pages/resume.html.twig
+++ b/templates/pages/resume.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{% block pagetitle %}Curriculum Vitae{% endblock %}
 {% block page_headers %}
 <style type='text/css'>
 
@@ -181,7 +182,12 @@
     .hresume .description {
         font-size: 0.9em;
     }
+
+    .hresume #contactinfo h2.fn {
+        display: none;
+    } 
 }
+
 </style>
 {% endblock %}
 {% block content %}
