--- a/templates/pages/calendar.html.twig
+++ b/templates/pages/calendar.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'page.html.twig' %}
 {% block pagetitle %}Calendar{% endblock %}
 {% block page_headers %}
     <style type='text/css'>
