--- a/templates/pages/front.html.twig
+++ b/templates/pages/front.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'page.html.twig' %}
 {% block page_headers %}
 <style type='text/css'>
     .frontpage .right .itemlist {
