Further tweaks to templates

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,9 @@
         <link href="{{ base_url }}/assets/css/main.css" rel="stylesheet">
         {% endblock %}
 
+        {% block page_resources %}
+        {% endblock %}
+
         {% block page_headers %}
         {% endblock %}
     </head>
