Fixed twitter link and padding for social icons on phones

--- a/app/templates/pages/front.html.twig
+++ b/app/templates/pages/front.html.twig
@@ -74,11 +74,15 @@
         }        
     }
 
-
     @media (max-width: 480px) {
         .frontpage .left {
             text-align: left;
             border-bottom: 1px solid #CCC;
+        }
+
+        .social-icons {
+            margin: 0;
+            padding: 0;            
         }
     }
 </style>
@@ -225,7 +229,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href='http://twitter.com' title='Twitter'>
+                    <a href='http://twitter.com/caseyamcl' title='Twitter'>
                         <img alt='Twitter' src='{{ base_url }}/assets/img/social-twitter.png' />
                     </a>
                 </li>
