--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -29,6 +29,8 @@
         {% block page_content %}{% endblock %}
 
         {% block page_mainjs %}
+            <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+            <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.0.min.js"><\/script>')</script>
             <script type='text/javascript' src='{{ base_url }}/assets/js/bootstrap.min.js'></script>
         {% endblock %}
 
