Minor changes, friendly composer error message, and updated dependencies removing QueryPath

--- a/app/templates/page.html.twig
+++ b/app/templates/page.html.twig
@@ -9,7 +9,7 @@
         {% block content %}
         {% endblock %}
 
-        <footer>
+        <footer class='span12'>
             <p>
                 <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.en_US" title='Creative Commons Share Alike 3.0 License'>
                     <img src='{{ base_url }}/assets/img/cc_12x12_gray.png' alt='Creative Commons Share-Alike' />
