--- a/app/templates/pages/work.html.twig
+++ b/app/templates/pages/work.html.twig
@@ -12,6 +12,12 @@
             font-size: 1.4em;
         }
 
+        article header span.url {
+            font-size: 0.8em;
+            font-weight: normal;
+            margin-left: 0.75em;
+        }
+
         article .preview-imgs {
             list-style-type: none;
             margin: 0;
@@ -32,15 +38,14 @@
             max-width: 350px;
         }
 
+        .work-content {
+            margin-top: 1.5em;
+        }
+
     </style>
 {% endblock %}
 {% block content %}
     <article>
-
-        <div class='row-fluid'>
-
-        </div>
-
 
         <div class='row-fluid'>
 
@@ -75,10 +80,16 @@
                         {% else %}
                             A project I worked on during {{ circa }}
                         {% endif %}
+
+                        {% if url is defined %}
+                            <span class='url'>(<a href='{{ url }}' title='Link to Project'>{{ url }}</a>)</span>
+                        {% endif %}
                     </h4>
                 </header>
 
-                {{ content | raw }}
+                <div class='work-content'>
+                    {{ content | raw }}
+                </div>
             </section>
         </div>
 
