Updated resume and hid work stuff for now

--- a/app/templates/pages/front.html.twig
+++ b/app/templates/pages/front.html.twig
@@ -135,7 +135,7 @@
 
     </section>                
 
-    <section class='row-fluid'>
+    {#<section class='row-fluid'>
 
         <div class='span4 left'>
             <h2 id='work'>Work</h2>
@@ -163,7 +163,7 @@
             </ul>
         </div>
 
-    </section>                
+    </section>#}
 
     <section class='row-fluid'>
 
