--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ h2 span {
     border: 0;
 }
 
+
 .action-links a,
 .action-links a:visited {
     display: inline-block;
@@ -65,33 +66,11 @@ h2 span {
     text-decoration: none;
 }
 
-.fa-twitter:hover {
-    color: #1da1f2;
+.icon {
+    border-radius: 50%;
+    height: 40px;
 }
 
-.fa-facebook:hover {
-    color: #3b5998;
-}
-
-.fa-linkedin:hover {
-    color: #0077b5;
-}
-
-.fa-github:hover {
-    color: #bd2c00;
-}
-
-.fa-envelope:hover {
-    color: green;
-}
-
-.fsu-logo {
-    background-image: url(fsu-seal.png);
-    background-repeat: no-repeat;
-    background-size: contain;
-    color: transparent;
-}
-
-.fsu-logo:hover {
-    background-image: url(fsu-seal-garnet.png);
+.icon:hover {
+    filter: drop-shadow(8px 8px 10px red) invert(60%);
 }
